--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# config file
-.env.yaml
+# env file with Secret keys
+.env
 
 # compiled binaries
 main
